--- a/index.html
+++ b/index.html
@@ -15,39 +15,55 @@
         <p>views</p>
       </article>
       <article class="Pictures">
+        <article class="Chipic1-3">
           <img src="assets/chicagopic1.jpeg" alt="">
           <img src="assets/chicagopic2.jpeg" alt="">
           <img src="assets/chicagopic3.jpeg" alt="">
+        </article>
+        <article class="Chipic4-6">
           <img src="assets/chicagopic4.jpeg" alt="">
           <img src="assets/chicagopic5.jpeg" alt="">
           <img src="assets/chicagopic6.jpeg" alt="">
+        </article>
+        <article class="Chipic7-10">
           <img src="assets/chicagopic7.jpeg" alt="">
           <img src="assets/chicagopic8.jpeg" alt="">
           <img src="assets/chicagopic9.jpeg" alt="">
           <img src="assets/chicagopic10.jpeg" alt="">
+        </article>
+        <article class="Chipic11-13">
           <img src="assets/chicagopic11.jpeg" alt="">
           <img src="assets/chicagopic12.jpeg" alt="">
           <img src="assets/chicagopic13.jpeg" alt="">
+        </article>
+        <article class="Chipic14-17">
           <img src="assets/chicagopic14.jpeg" alt="">
           <img src="assets/chicagopic15.jpeg" alt="">
           <img src="assets/chicagopic16.jpeg" alt="">
           <img src="assets/chicagopic17.jpeg" alt="">
+        </article>
+        <article class="Chipic18-20"
           <img src="assets/chicagopic18.jpeg" alt="">
           <img src="assets/chicagopic19.jpeg" alt="">
           <img src="assets/chicagopic20.jpeg" alt="">
+        </article>
+        <article class="Chipic21-24">
           <img src="assets/chicagopic21.jpeg" alt="">
           <img src="assets/chicagopic22.jpeg" alt="">
           <img src="assets/chicagopic23.jpeg" alt="">
           <img src="assets/chicagopic24.jpeg" alt="">
+        </article>
+        <article class="Chipic25-27">
           <img src="assets/chicagopic25.jpeg" alt="">
           <img src="assets/chicagopic26.jpeg" alt="">
           <img src="assets/chicagopic27.jpeg" alt="">
+        </article>
+        <article class="Chipic28-30">
           <img src="assets/chicagopic28\.jpeg" alt="">
           <img src="assets/chicagopic29.jpeg" alt="">
           <img src="assets/chicagopic30.jpeg" alt="">
+          </article>
       </article>
     </section>
-
-
   </body>
 </html>
